# GinkgoServer

./: .gitmodules  ISSUES.md  README.md
GinkgoPython/: .gitignore  README.md  main.py  pyproject.toml
GinkgoPython/data/: .gitkeep  seed.json
GinkgoPython/data/tasks/: augment.md  auxiliary.md  coherency.md  decree.md  filter.md  gsod.md  health.md  validate.md
GinkgoPython/ginkgo/: connector.py  server.py
GinkgoPython/ginkgo/api/: frontend_routes.py  test_ui.py  unreal_routes.py
GinkgoPython/ginkgo/core/: config.py
GinkgoPython/ginkgo/data/: labels.json  seed.json
GinkgoPython/ginkgo/models/: __init__.py  base.py  database_models.py  decree.py  enums.py  prompt.py  thought.py
GinkgoPython/ginkgo/schemas/: frontend.py  unreal.py
GinkgoPython/ginkgo/services/: __init__.py  crud.py  database.py  database_service.py  inspector.py  llm.py  llm_service.py  seed.py  seed_service.py
GinkgoPython/ginkgo/services/tasks/: augment.py  auxiliary.py  base.py  coherency.py  decree.py  filter.py  gsod.py  health.py  validate.py
GinkgoPython/ginkgo/utils/: logger.py  math.py  msc.py  network.py  torch.py
GinkgoPython/ginkgo/ws/: commands.py
GinkgoPython/ginkgo/ws/handlers/: decree_handler.py  init_handler.py  key_handler.py  prompt_handler.py  thought_handler.py
GinkgoPython/sandbox/: allocate-gpu.py  check-cuda.py  download-gemma.py  gemma-3n.py  inference-test.py  string-concatenation.py  websocket-test.py
GinkgoPython/sandbox/eval/: inputs.json
GinkgoPython/tests/: test_gsod_task.py
GinkgoPython/weights/: .gitkeep
